# AudioEditor

./: CMakeLists.txt  PROJECT._STRUCTURE.md  README.md  audio_composer  main  main.c
.cache/clangd/index/: main.c.D8863805666C4DE5.idx  util.c.075793D4D8877558.idx  util.h.E20988BD7E644ED6.idx
output/: reverse
src/: Makefile  a  a.out  main  main.c  sound_composer  util.c  util.h
src/audio/: main  main.c  util.c  util.h
src/core/: main.c
